--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,44 @@
   }
 }
 
-#map { height: 180px; }
+#map { 
+  height: 50%;
+  width: 50%;
+  text-align: center;
+ }
 
 .leaflet-container {
   width: 100%;
   height: 100vh;
+}
+
+#sidebar {
+  border-style: solid;
+  border-color: black;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.popup {
+  text-align: center;
+}
+
+.header {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  padding: 30px;
+  background-color: rgb(0, 195, 255);
+}
+.header-home{
+  padding: 15px;
+}
+.header-list{
+  padding: 15px;
+}
+.header-about{
+  padding: 15px;
 }
