--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,46 @@
 .header-about{
   padding: 15px;
 }
+
+.main-container{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: -200px;
+}
+.comment-flexbox{
+  display:flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.comment-text{
+  margin:12px 0;
+  font-size: 1.15rem;
+  font-weight: 600;
+}
+.text-box{
+  height:75px;
+  width:465px;
+  background-color: white;
+}
+.submit-button{
+  height: 40px;
+  width: 80px;
+  background-color: blue;
+  color: white;
+  font-size: 1.05rem;
+  margin-top:10px;
+  border-radius: 5px;
+  border-style: none;
+  cursor:pointer;
+}
+.submitted-comment{
+  height: 75px;
+  width: 465px;
+  background-color: white;
+  border-radius: 5px;
+  margin: 10px 0;
+  word-break: break-all;
+}
