--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 
 #map { 
   height: 50%;
-  width: 50%;
+  width: auto;
   text-align: center;
  }
 
@@ -119,4 +119,32 @@
   border-radius: 5px;
   margin: 10px 0;
   word-break: break-all;
+}
+
+.train-table {
+  border: solid;
+  justify-content: space-evenly;
+  width: 100%;
+  text-align: center;
+  border-right: black;
+  background-color: #FAF9F6;
+
+
+}
+
+th:hover {
+  background-color: rgb(0, 195, 255);
+}
+
+/* table, th, td {
+  border-right: 5px solid black;
+  } */
+
+.th {
+  border-bottom: 1px solid black;
+}
+
+.Metro-Logo {
+  width: 22px;
+  height: 22px;
 }
