Filtering Home Page

--- a/src/App.css
+++ b/src/App.css
@@ -157,3 +157,13 @@ th:hover {
 .comment-image{
   width: 190px;
 }
+
+.metro-image{
+  width: 100px;
+  height: 100px;
+}
+
+.metro-map{
+  width: 100px;
+  height: 100px;
+}
