--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,9 @@
   height: 50%;
   width: 1850px;
   text-align: center;
+  padding: 40px;
+  
+  background-color: white;
  }
 
 .website-title{
@@ -131,10 +134,13 @@
   justify-content: space-evenly;
   width: 100%;
   text-align: center;
-  border-right: black;
+  border-color: black;
   background-color: #FAF9F6;
+  
+}
 
-
+.table-div{
+  padding: 50px; 
 }
 
 th:hover {
