--- a/src/App.css
+++ b/src/App.css
@@ -45,10 +45,7 @@
 
 }
 
-  padding: 40px;
   
-  background-color: white;
- }
 
 
 .website-title {
@@ -100,12 +97,15 @@
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+  display: flex;
+  gap: 20px;
 }
 
 .comment-flexbox {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  
 
 }
 
@@ -138,7 +138,7 @@
   width: 465px;
   background-color: white;
   border-radius: 5px;
-  margin: 10px 0;
+  margin: 1px 0;
   word-break: break-all;
 }
 
@@ -174,7 +174,7 @@ th:hover {
   height: 22px;
 }
 
-.comment-image {
+.comment-submitted .comment-image img {
   width: 190px;
 }
 
@@ -182,14 +182,18 @@ th:hover {
 
 .metro-image{
 
-  width: 100px;
-  height: 100px;
+  width: 300px;
+  height: 200px;
+  margin: 20px 0px;
+  border: 2px solid black;
 }
 
 
 .metro-map {
   width: 100px;
   height: 100px;
+  margin: 20px 0px;
+  border: 2px solid black;
 }
 
 .PFP {
@@ -214,9 +218,109 @@ th:hover {
 
 .NavBarLinks {
   display: flex;
+}
 
-.metro-map{
-  width: 100px;
-  height: 100px;
+.metro-map {
+  width: 300px;
+  height: 300px;
 
+}
+
+
+.submitted-comment {
+  border-color: black;
+  border-radius: 3px;
+  position: relative;
+  left: 13rem;
+  bottom: 10rem;
+  word-break: break-word;
+  overflow-wrap:break-word;
+  width: 250px;
+  height: 150px;
+  
+}
+
+.comment-submitted{
+  border: 2px solid black;
+  border-radius: 10px;
+  width: 60%;
+  height: auto; 
+  min-height: 300px;
+  padding: 0;
+  
+}
+
+.comment-name{
+  width:97%;
+  height:30px;
+  
+  margin:0px;
+  padding: 10px;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  font-size: 15px;
+  letter-spacing: 2px;
+  border: 1px solid black;
+  background-color: antiquewhite;
+
+
+}
+
+.comment-image{
+  width: 25%;
+  height: 250px;
+  position: relative;
+
+}
+
+.please-work{
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  position: absolute;
+  top:30vh;
+  left:50vh;
+  z-index: 1000;
+  border: 3px solid black;
+  background-color:  rgb(0, 195, 255);
+}
+
+
+.lines-welcome{
+  justify-content: center;
+  text-align: center;
+  margin: 400px;
+  border: 3px solid black;
+  }
+
+  .header {
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 30px;
+    background-color: rgb(0, 195, 255);
+    align-items: center;
+    align-content: center;
+    background-color: rgb(0, 195, 255);
+    flex-direction: row;
+justify-content: space-evenly;
+}
+
+.home-link{
+  padding:20Px;
+}
+
+.community-link{
+  padding:20Px;
+}
+
+.about-link{
+  padding:20Px;
+}
+
+.remove-button-homepage{
+  bottom:0;
+  right:0;
+  position: absolute;
 }
