--- a/src/App.css
+++ b/src/App.css
@@ -45,9 +45,6 @@
 
 }
 
-
-
-
 .website-title {
   padding: 5px;
 }
@@ -57,8 +54,6 @@
   height: 100vh;
 }
 
-
-
 .flex-container {
   display: flex;
   flex-direction: row-reverse;
@@ -66,6 +61,9 @@
 
 .popup {
   text-align: center;
+  border-radius: 15px;  
+/*   
+  background-color: #282c34; */
 }
 
 .header {
